--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -34,3 +34,15 @@ en:
   cant_finish_before_start: "Can't finish before start"
   datetime_variable: "Must be datetime variable"
   cant_follow_self: "Can't follow yourself"
+  about: "About"
+  e_learning: "E-LEARNING"
+  home: "Home"
+  help: "Help"
+  follow_us: "Follow us"
+  sign_in: "Sign in"
+  sign_up: "Sign up"
+  this_would_be_a_static_about_page: "This would be a static about page in a Rails application."
+  this_would_be_a_static_home_page: "This would be a static home page in a Rails application."  
+  this_would_be_a_static_help_page: "This would be a static help page in a Rails application."
+  framgia_e_learning: "2017 © Framgia Elearning"
+  provide_best_quality: "Provide best quality elearning for you"
