--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -46,3 +46,24 @@ en:
   this_would_be_a_static_help_page: "This would be a static help page in a Rails application."
   framgia_e_learning: "2017 © Framgia Elearning"
   provide_best_quality: "Provide best quality elearning for you"
+  the_form_contanins: "The form contains"
+  error: "error"
+  confirmation: "Confirmation"
+  save_changes: "Save changes"
+  log_out: "Log out"
+  edit: "Edit"
+  waiting_confirmation: "Currently waiting confirmation for:"
+  leave_blank: "(leave blank if you don't want to change it)"
+  need_your_current_password: "(we need your current password to confirm your changes)"
+  update: "Update"
+  cancel_my_account: "Cancel my account"
+  unhappy: "Unhappy?"
+  are_you_sure: "Are you sure?"
+  back: "Back"
+  forgot_password: "Forgot your password?"
+  send_reset_password: "Send me reset password instructions"
+  change_password: "Change your password"
+  new_password: "New password"
+  characters_minimum: "characters minimum"
+  no_receive_confirmation: "Didn't receive confirmation instructions?"
+  no_receive_unlock: Didn't receive unlock instructions?"
