Preview words and answers in lesson and create enroll

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -73,3 +73,8 @@ en:
   start_lesson: "Start lesson"
   user: "User"
   settings: "Settings"
+  please_log_in: "Please log in."
+  start: "Start"
+  review: "Review"
+  continue: "Continue"
+  you_havent_start_course: "You haven't start the course yet."
