--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -96,3 +96,10 @@ en:
   word_list: "Word list "
   courses_in: "Courses in"
   words_in: "Words in"
+  find_test_not_found: "Find test not found"
+  true_answer: "True answer"
+  false_answer: "False answer"
+  result: "Result"
+  speak: "Speak"
+  next: "Next"
+  done: "Done"
