Add follow relationship and change homepage

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -77,3 +77,14 @@ en:
   start: "Start"
   review: "Review"
   continue: "Continue"
+  you_havent_start_course: "You haven't start the course yet."
+  all_users: "All users"
+  following: "Following"
+  followers: "Followers"
+  wellcome: "Wellcome to Framgia E-learning"
+  word_list: "Word List"
+  lessons: "Lessons"
+  my_courses: "My Courses"
+  follow: "Follow"
+  unfollow: "Unfollow"
+  view_my_profile: "View my profile"
