Preview words and answers in lesson and create enroll

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -43,7 +43,7 @@ en:
   sign_in: "Sign in"
   sign_up: "Sign up"
   this_would_be_a_static_about_page: "This would be a static about page in a Rails application."
-  this_would_be_a_static_home_page: "This would be a static home page in a Rails application."  
+  this_would_be_a_static_home_page: "This would be a static home page in a Rails application."
   this_would_be_a_static_help_page: "This would be a static help page in a Rails application."
   framgia_e_learning: "2017 © Framgia Elearning"
   provide_best_quality: "Provide best quality elearning for you"
@@ -73,3 +73,11 @@ en:
   start_lesson: "Start lesson"
   user: "User"
   settings: "Settings"
+  please_log_in: "Please log in."
+  start: "Start"
+  review: "Review"
+  continue: "Continue"
+  you_havent_start_course: "You haven't start the course yet."
+  no_lesson_found: "No lesson found."
+  cant_find_params: "Can't find required params."
+  cant_build_enroll: "Can't build enrollment."
