Add follow relationship and change homepage

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -81,3 +81,13 @@ en:
   no_lesson_found: "No lesson found."
   cant_find_params: "Can't find required params."
   cant_build_enroll: "Can't build enrollment."
+  all_users: "All users"
+  following: "Following"
+  followers: "Followers"
+  wellcome: "Wellcome to Framgia E-learning"
+  word_list: "Word List"
+  lessons: "Lessons"
+  my_courses: "My Courses"
+  follow: "Follow"
+  unfollow: "Unfollow"
+  view_my_profile: "View my profile"
