--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -96,3 +96,23 @@ en:
   word_list: "Word list "
   courses_in: "Courses in"
   words_in: "Words in"
+  delete: "Delete"
+  add: "Add"
+  delete_category: "Delete Category: %{category}"
+  category_deleted: "Category %{category} is deleted"
+  no_permission: "You don't have permission to do this"
+  category_not_found: "Category not found"
+  category_updated: "Category updated"
+  category_created: "Category created"
+  not_longer_than: "Not longer than %{length} words"
+  new_category: "Create a new Category"
+  edit_category: "Edit Category"
+  new_category: "New Category"
+  create: "Create"
+  new_course: "New Course"
+  course_created: "Course created"
+  course_not_found: "Course not found"
+  course_deleted: "Course %{course} is deleted"
+  delete_course: "Delete Course: %{course}"
+  course_updated: "Course updated"
+  edit_course: "Edit Course"
