Admin: lessons, words, answers

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -81,7 +81,6 @@ en:
   no_lesson_found: "No lesson found."
   cant_find_params: "Can't find required params."
   cant_build_enroll: "Can't build enrollment."
-  all_users: "All users"
   following: "Following"
   followers: "Followers"
   wellcome: "Wellcome to Framgia E-learning"
@@ -123,3 +122,42 @@ en:
   delete_course: "Delete Course: %{course}"
   course_updated: "Course updated"
   edit_course: "Edit Course"
+  delete: "Delete"
+  add: "Add"
+  no_permission: "You don't have permission to do this"
+  not_longer_than: "Not longer than %{length} words"
+  create: "Create"
+  new_lesson: "New Lesson"
+  lesson_created: "Lesson created"
+  lesson_not_found: "Lesson not found"
+  lesson_deleted: "Lesson %{lesson} is deleted"
+  delete_lesson: "Delete Lesson: %{lesson}"
+  lesson_updated: "Lesson updated"
+  edit_lesson: "Edit Lesson"
+  new_word: "New Word"
+  word_created: "Word created"
+  word_not_found: "Word not found"
+  word_deleted: "Word %{word} is deleted"
+  delete_word: "Delete Word: %{word}"
+  word_updated: "Word updated"
+  edit_word: "Edit Word"
+  new_answer: "New Answer"
+  answer_created: "Answer created"
+  answer_not_found: "Answer not found"
+  answer_deleted: "Answer %{answer} is deleted"
+  delete_answer: "Delete Answer: %{answer}"
+  answer_updated: "Answer updated"
+  edit_answer: "Edit Answer"
+  is_correct: "This is a correct answer"
+  number_of_true_answers: "Number of true answers: %{number}"
+  this_answer_is: "This answer is %{is_correct}"
+  all_users: "All users"
+  all_categories: "All categories"
+  user_deleted: "User %{user} is deleted"
+  delete_user: "Delete User: %{user}"
+  name: "Name: "
+  email: "Email: "
+  users: "Users"
+  single_choice: "Single choice"
+  multiple_choice: "Multiple choice"
+  kind: "Kind: "
