word, lesson list

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -96,3 +96,5 @@ en:
   word_list: "Word list "
   courses_in: "Courses in"
   words_in: "Words in"
+  your_lessons: "Your lessons"
+  your_words: "Your words"
