Add learn table and show word list

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -94,7 +94,7 @@ en:
   lessons_of: "Lessons of "
   word_list: "Word list "
   courses_in: "Courses in"
-  words_in: "Words in"
+  words_in: "Words in "
   find_test_not_found: "Find test not found"
   true_answer: "True answer"
   false_answer: "False answer"
@@ -165,3 +165,14 @@ en:
   submit_answer: "Submit Answer"
   activities: "Activities"
   learned: "learned"
+  my_lessons: "My lessons"
+  my_words: "My words"
+  words: "Words"
+  all: "All"
+  all_users: "All Users"
+  learned: "Learned"
+  not_learned: "Not Learned"
+  filter: "Filter"
+  pdf: "PDF"
+  that_you_have: " that you have  "
+  course: "Course: "
