--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -94,7 +94,7 @@ en:
   lessons_of: "Lessons of "
   word_list: "Word list "
   courses_in: "Courses in"
-  words_in: "Words in"
+  words_in: "Words in "
   find_test_not_found: "Find test not found"
   true_answer: "True answer"
   false_answer: "False answer"
@@ -163,3 +163,13 @@ en:
   kind: "Kind: "
   save_result_error: "Save result error"
   submit_answer: "Submit Answer"
+  my_lessons: "My lessons"
+  my_words: "My words"
+  words: "Words"
+  all: "All"
+  all_users: "All Users"
+  learned: "Learned"    
+  not_learned: "Not Learned"
+  filter: "Filter"
+  pdf: "PDF"
+  that_you_have: " that you have  "
