--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -163,3 +163,5 @@ en:
   kind: "Kind: "
   save_result_error: "Save result error"
   submit_answer: "Submit Answer"
+  activities: "Activities"
+  learned: "learned"
